--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -11,12 +11,11 @@
         <h5 class="card-title"> {{car.carName}} </h5>
         <p class="card-text"> Yıl: {{car.modelYear}} </p>
         <p class="card-text"> Renk: {{car.colorName}} </p>
-        <p class="card-text"> Günlük Fiyat: {{car.dailyPrice}} </p>
+        <p class="card-text"> Günlük Fiyat: {{car.dailyPrice}} | currency </p>
         <p class="card-text"> {{car.description}} </p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-muted">Last updated 10 mins ago</small></p>
+        <button type="submit" class="btn btn-dark mb-3">Kirala</button>
       </div>
     </div>
   </div>
 </div>
-</div>
-
