Rental Add structure has been added. Fake Payment (Credit Card) structure has been updated.

--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -9,44 +9,23 @@
             <div class="col-md-12" style="margin-bottom: 20px;">
               <label for="creditCardNumber">Kredi Kartı Numarası</label>
               <div class="form-group">
-                <input
-                  type="text"
-                  id="creditCardNumber"
-                  formControlName="creditCardNumber"
-                  class="form-control"
-                  maxlength="16"
-                  placeholder="0000 0000 0000 0000"
-                />
+                <input class="form-control"  type="text" id="creditCardNumber" formControlName="creditCardNumber" maxlength="16" placeholder="0000 0000 0000 0000"/>
               </div>
             </div>
 
             <div class="col-md-5" style="display: inline-block; margin-right: 50px;">
               <div class="form-group">
                 <label for="expiration">Son kullanma tarihi</label>
-                <input
-                  class="form-control"
-                  formControlName="expiration"
-                  id="expiration"
-                  type="text"
-                  maxlength="5"
-                  placeholder="02/2021"
-                />
+                <input class="form-control" formControlName="expiration" id="expiration" type="text" maxlength="5" placeholder="02/2021"/>
               </div>
-            </div> 
+            </div>
 
               <div class="col-md-5" style="display: inline-block;">
                 <div class="form-group">
                   <label for="CardSecurityNumber">CVV/CVC</label>
-                  <input
-                    class="form-control"
-                    formControlName="CardSecurityNumber"
-                    id="CardSecurityNumber"
-                    type="text"
-                    maxlength="3"
-                    placeholder="123"
-                  />
+                  <input class="form-control" formControlName="CardSecurityNumber" id="CardSecurityNumber" type="text" maxlength="3" placeholder="123"/>
                 </div>
-              </div> 
+              </div>
 
 
 
